Reworking of PointBuffer and Archivers.